@@ -220,7 +220,7 @@ public class HoldingsNotesUpdater {
           .forEach(
               note -> {
                 String updatedNote = note.getNote().replace(valueToRemove, StringUtils.EMPTY);
-                if (updatedNote.trim().isEmpty()) {
+                if (updatedNote.isBlank()) {
                   notesToRemove.add(note);
                 } else {
                   note.setNote(updatedNote);
@@ -242,7 +242,7 @@ public class HoldingsNotesUpdater {
                 && contains(note.getNote(), action.getInitial())) {
               String replacedNote =
                   replace(note.getNote(), action.getInitial(), action.getUpdated());
-              if (replacedNote.trim().isEmpty()) {
+              if (replacedNote.isBlank()) {
                 notesToRemove.add(note);
               } else {
                 note.setNote(replacedNote);
